--- a/views/provision.ejs
+++ b/views/provision.ejs
@@ -6,6 +6,7 @@
     <title>Persona / Google Identity Bridge</title>
   </head>
   <body>
+    <input type="hidden" id="csrf" value="<%= _csrf %>"/>
     <script src="<%= personaUrl %>/provisioning_api.js"></script>
     <script type="text/javascript">
       (function() {
@@ -35,6 +36,8 @@
 
             req.open(type, url, true);
             req.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
+            var csrf = document.getElementById('csrf').value;
+            req.setRequestHeader('X-CSRF-Token', csrf);
 
             if (data) {
               req.setRequestHeader('Content-type', contentType);
